--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^18.6.4"
   },
   "dependencies": {
+    "@actions/core": "^1.9.0",
+    "@actions/github": "^5.0.3",
     "typescript": "^4.7.4"
   }
 }
